<resources>
    <string name="app_name">cft test task</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_birthday">Birth date</string>
    <string name="title_date_picker">Select a date:</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="button_sign_up">Sign up</string>

    <string name="title_activity_greetings">GreetingsActivity</string>
    <string name="dialog_title_greetings">Greetings</string>
    <string name="dialog_message_greetings">Hello, %1$s</string>
    <string name="button_greetings">Welcome!</string>
    <string name="ok_greetings">OK</string>
</resources>